Fix dropdown gap in certain screen sizes

--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@ https://developers.facebook.com/docs/reference/plugins/like-box/
 @media (min-width: 768px) and (max-width:991px) {
   .dropdownmenu-fix
   {
-    margin-top:-20px !important;
+    margin-top:-26px !important;
   }
 }
 
